2005-05-25 Richard Frith-Macdonald  <rfm@gnu.org>

	* configure.ac: Check for new postgres string escaping
	* configure: Regenerate
	* SQLClient.h: Add quoteString method for subclasses to override
	* SQLClient.m:  Add new method and change marker for blobs to be
	one that shouldn't occur in a quoted string.
	* SQLite.m: Use new blob marker
	* MySQL.m: Use new blob marker
	* config.h.in: Add new postgres escaping function
	* Postgres.m: Handle new escaping
	* testPostgres.m: Add check for escaping odd characters.

2005-02-22 Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.m: Support quoting of NSArray and NSSet objects.

2006-01-11  Nicola Pero <nicola@brainstorm.co.uk>

	* configure.ac: Do not source GNUSTEP_CONFIG_FILE if it doesn't
	exist, so that the library can be used with older versions of
	gnustep-make/gnustep-base too. :-)
	* configure: Regenerated.

2005-11-23 Richard Frith-Macdonald  <rfm@gnu.org>

	Added SQLite backend support.

2005-11-14 Richard Frith-Macdonald  <rfm@gnu.org>

	Factor out WebServer into separate library, and timer and caching
	stuff into Performance library.  Make this library depend on the
	Performance library.

2005-10-27 Richard Frith-Macdonald  <rfm@gnu.org>

	* WebServer.m: Add more accurate timestamps and implement request
	and session duration logging.  Also add a unique session ID number
	to each log to make it easy to track requests on a session.

2005-09-28 Richard Frith-Macdonald  <rfm@gnu.org>

	* GNUmakefile.wrapper.objc.preamble: new file
	* SQLClient.jigs: new file
	* GNUmakefile: Provide java wrappings for SQLClient and friends

2005-09-28 Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.m: boost performance of quoting a little.
	Provide -count method for transactions.


2005-09-26 Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.h: Clean up caching/timestamps.
	* SQLClient.m: ditto.

2005-09-22 Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.h: Rewrite caching, and expose cache for external use.